visibility on home fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,6 +23,7 @@ body h1, h2, h3, h4 {
 
 label {
     color: #fff;
+    text-shadow: 2px 2px #000;
 }
 
 a {
